--- a/Modulo 4/Desafios/d015/projeto-social/estilos/style.css
+++ b/Modulo 4/Desafios/d015/projeto-social/estilos/style.css
@@ -8,7 +8,7 @@
 html, body{
     height: 100vh;
     width: 100vh;
-    background: url(../imagens/blue-smoky-art-abstract-background.jpg)no-repeat top center;
+    background: #024059 url(../imagens/blue-smoky-art-abstract-background.jpg)no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -26,4 +26,11 @@ section#telefone{
     height: 627px;
     width: 311px;
     background: url(../imagens/frame-iphone.png) no-repeat;
+}
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
 }
