Enviando ultima atualização para o projeto de redes sociais!

--- a/Modulo 4/Desafios/d015/projeto-social/estilos/style.css
+++ b/Modulo 4/Desafios/d015/projeto-social/estilos/style.css
@@ -8,7 +8,7 @@
 html, body{
     height: 100vh;
     width: 100vh;
-    background: #024059 url(../imagens/blue-smoky-art-abstract-background.jpg)no-repeat top center;
+    background: #024059 url(../imagens/5044561.jpg)no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -31,6 +31,23 @@ iframe#tela{
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 267px;
     height: 471px;
+}
+section#redes-sociais{ 
+    text-align: left;
+}
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.404);
+    box-sizing: border-box;
+}
+section#redes-sociais img:hover{
+    border: 2px solid #dda706c4;
+    transform: translate(4px, -4px);
+    box-shadow: 5px 5px 10px rgba(61, 61, 61, 0.404);
+    transition: transform .4s;
+
 }
